--- a/final.html.erb
+++ b/final.html.erb
@@ -1,4 +1,7 @@
 <html>
+  <head>
+    <link rel="stylesheet" href="./style.css" type='text/css' />
+  </head>
   <body>
     <% tweets.each do |tweet| %>
       <p>
