--- a/style.css
+++ b/style.css
@@ -16,3 +16,12 @@
   max-width: 100%;
   max-height: 400px;
 }
+
+@media print {
+  @page {
+    margin: 0;
+  }
+  body {
+    margin: 1.6cm;
+  }
+}
