--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body {
+  filter: grayscale(100%);
+}
 .tweet {
   /* border-top: 1px solid black; */
   margin-top: 24px;
@@ -21,9 +24,14 @@
 
 @media print {
   @page {
+    /* size: 5in 6.5in; */
+  }
+}
+/* @media print {
+  @page {
     margin: 0;
   }
   body {
     margin: 1.6cm;
   }
-}
+} */
