--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
   filter: grayscale(100%);
   font-family: palatino Impact;
   font-size: 11px;
+  margin: 0px;
 }
 .tweet {
   /* border-top: 1px solid black; */
@@ -29,11 +30,11 @@ body {
     /* size: 5in 6.5in; */
   }
 }
-/* @media print {
+@media print {
   @page {
-    margin: 0;
+    margin: 1in;
   }
-  body {
+  /* body {
     margin: 1.6cm;
-  }
-} */
+  } */
+}
