--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   filter: grayscale(100%);
-  font-family: palatino Impact;
+  font-family:  palatino;
   font-size: 11px;
   margin: 0px;
 }
@@ -32,6 +32,11 @@ h1 {
   max-width: 100%;
   max-height: 360px;
   object-fit: contain;
+  float: right;
+  margin: 8px 48px 12px 24px;
+  border: 1px solid black;
+  padding: 20px;
+  border-radius: 2px;
 }
 
 @media print {
@@ -46,4 +51,11 @@ h1 {
   /* body {
     margin: 1.6cm;
   } */
+}
+.text {
+  display: inline;
+}
+.text.with-images {
+  clear: both;
+  display: block;
 }
