Css fixes and first cover page css

--- a/cover_page_0.html.erb
+++ b/cover_page_0.html.erb
@@ -2,6 +2,10 @@
   <head>
     <link rel="stylesheet" href="./style.css" type='text/css' />
   </head>
-  book <%= book_index %> cover page 0
-  <%= date_range_string %>
+  <body class='cover0'>
+    <div class='title'>
+      The Complete Works of Corey Quinn
+    </div>
+    <div class='volume'>Volume <%= book_roman_numeral.upcase %></div>
+  </body>
 </html>
