--- a/cover_page_1.html.erb
+++ b/cover_page_1.html.erb
@@ -2,6 +2,16 @@
   <head>
     <link rel="stylesheet" href="./style.css" type='text/css' />
   </head>
-  book <%= book_index %> cover page 1
-  <%= date_range_string %>
+
+  <body class='cover1'>
+    <div class='other-by'>Other works by Corey Quinn</div>
+    <ul>
+      <li>Corey Quinn: Selected Blogposts and Drunken Rants</li>
+      <li>I Am The Cloud: The Quinn Compendium</li>
+      <li>In Defense of Yappy Dogs: My Memoirs, 2010-2020</li>
+      <li>The Problem with Mike</li>
+      <li>Corey Quinn: My Life as a Shitposter</li>
+    </ul>
+  </body>
+
 </html>
