--- a/style.css
+++ b/style.css
@@ -97,3 +97,73 @@ h1 {
 .cover0 .volume {
   font-size: 24px;
 }
+
+.cover1 {
+  padding-top: 300px;
+  font-style: italic;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 16px;
+}
+.cover1 .other-by {
+  font-size: 18px;
+}
+.cover1 ul {
+  padding: 0;
+}
+.cover1 li {
+  list-style: none;
+  margin: none;
+}
+
+.cover2 {
+  height: calc(100vh-5px);
+  display: flex;
+}
+.cover2 .inner {
+  border: 10px double black;
+  border-radius: 24px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  padding-top: 140px;
+}
+.cover2 .title1 {
+  font-size: 28px;
+}
+.cover2 .of {
+  margin-top: 8px;
+  font-size: 20px;
+}
+.cover2 .corey {
+  margin-top: 4px;
+  font-size: 72px;
+  text-decoration: underline;
+  text-decoration-color: #555;
+  text-underline-offset: 4px;
+  text-decoration-thickness: 2px;
+  font-weight: bold;
+  /* text-transform: uppercase; */
+}
+.cover2 .volume {
+  margin-top: 100px;
+  font-size: 28px;
+}
+.cover2 .range {
+  margin-top: 20px;
+  font-size: 20px;
+}
+.cover2 .unabridged {
+  margin-top: 100px;
+  font-size: 20px;
+}
+.cover2 .including {
+  margin-top: 20px;
+  font-size: 20px;
+  font-style: italic;
+  margin-left: 40px;
+  margin-right: 40px;
+  text-align: center;
+}
