Dedication page and style fixes

--- a/cover_page_2.html.erb
+++ b/cover_page_2.html.erb
@@ -13,6 +13,7 @@
       <div class='range'>Tweets from <%= date_range_string%></div>
       <div class='unabridged'>Unabridged</div>
       <div class='including'>Including jokes, puns, insights, insults, and takes both hot and cold</div>
+      <div class='publisher'>Shitty Ruby Script Publishing, California</div>
     </div>
   </body>
 </html>
