--- a/style.css
+++ b/style.css
@@ -105,9 +105,11 @@ h1 {
   flex-direction: column;
   align-items: center;
   font-size: 16px;
+  text-align: center;
 }
 .cover1 .other-by {
   font-size: 18px;
+  font-weight: bold;
 }
 .cover1 ul {
   padding: 0;
@@ -115,10 +117,12 @@ h1 {
 .cover1 li {
   list-style: none;
   margin: none;
+  margin-top: 8px;
 }
 
 .cover2 {
-  height: calc(100vh-5px);
+  margin: 0;
+  height: 100vh;
   display: flex;
 }
 .cover2 .inner {
@@ -166,4 +170,43 @@ h1 {
   margin-left: 40px;
   margin-right: 40px;
   text-align: center;
+  max-width: 400px;
+  line-height: 30px;
+}
+.cover2 .publisher {
+  margin-top: 120px;
+}
+
+.cover3 {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  height: 100vh;
+  margin: 0;
+  font-size: 20px;
+}
+
+.cover4 {
+  padding-top: 300px;
+  font-style: italic;
+  font-size: 24px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  line-height: 32px;
+}
+.cover4 .inner {
+  max-width: 400px;
+}
+
+.cover5 {
+  margin: 0;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+.cover5 .initial-image {
+  width: 400px;
+  object-fit: contain;
 }
