--- a/cover_page_5.html.erb
+++ b/cover_page_5.html.erb
@@ -6,6 +6,6 @@
   <body class='cover5'>
     <%# <div class='inner'> %>
       <img class='initial-image' src='../initial_tweet_image.png' />
-    <%# </div> %>
-  </body>
+    </div>
+  <%# </body> %>
 </html>
