--- a/cover_page_1.html.erb
+++ b/cover_page_1.html.erb
@@ -9,7 +9,7 @@
       <li>Corey Quinn: Selected Blogposts and Drunken Rants</li>
       <li>I Am The Cloud: The Quinn Compendium</li>
       <li>In Defense of Yappy Dogs: My Memoirs, 2010-2020</li>
-      <li>Don't You Know Who I Am?</li>
+      <li>Don't You Know Who I Am?! - The Corey Quinn Story</li>
       <li>On Mike: You Know What Your Problem Is?</li>
       <li>Corey Quinn: My Life as a Shitposter</li>
     </ul>
